Додав останні зміни

--- a/view/frontend/templates/menu.phtml
+++ b/view/frontend/templates/menu.phtml
@@ -1,5 +1,7 @@
+<div id="top_menu">
 <ul class="header links">
 <li><a href="/books">dasd</a></li>
 <li><a href="/dvds">asd</a></li>
 <li><a href="/promo">sadasd</a></li>
 </ul>
+</div>
