--- a/view/frontend/templates/main.phtml
+++ b/view/frontend/templates/main.phtml
@@ -5,3 +5,14 @@
  */
 ?>
  
+<div data-bind=''>
+
+
+		
+		<input  id="number-text" type="text" >
+		<input id="pass-number" type="submit">
+	
+
+	
+</div>
+<button data-mage-init='{ "callback": {} }'></button>
